--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
     height: 48px;
     width: 100%;
     background: gray;
+    text-align: center;
 }
 
 .left {
+    text-align: center;
     margin-top: 10px;
     display: inline-block;
     width: 9%;
@@ -13,6 +15,7 @@
 }
 
 .right {
+    text-align: center;
     margin-top: 10px;
     /* display: inline-block; */
     width: 9%;
@@ -24,6 +27,7 @@
 
 .container1 {
 
+    text-align: center;
     background: gray;
     width: 80.6%;
     height: 260px;
@@ -34,6 +38,7 @@
 
 .container2 {
     position: absolute;
+    text-align: center;
     left: 137px;
     background: gray;
     width: 79.7%;
@@ -45,6 +50,7 @@
 
 .footer {
 
+    text-align: center;
     margin-top: 10px;
     height: 83px;
     width: 100%;
